--- a/pom.xml
+++ b/pom.xml
@@ -17,4 +17,13 @@
 
     <packaging>jar</packaging>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>cn.tenbit.basic</groupId>
+            <artifactId>tenbit-core</artifactId>
+        </dependency>
+
+    </dependencies>
+
 </project>
